# version-guard

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
src/version_guard/: __init__.py  __main__.py  config.py  exceptions.py
src/version_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/version_guard/_cli/: args.py  utils.py
src/version_guard/rules/: __init__.py  base.py  regex_rule.py  xml_rule.py
